samples/_failures_safe/1761545200_793395_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9d899cc.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_b9d899cc.c:146:10: error: expected ‘)’ at end of input
  146 |     if (n
      |        ~ ^
      |          )
./samples/SAFE/__tmp_b9d899cc.c:146:5: error: expected declaration or statement at end of input
  146 |     if (n
      |     ^~
